update places to show journal entries

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,17 +1,19 @@
-<h2><%= @place.name %></h2>
-<p>
-  <%= link_to 'Back to Places List', places_path %>
-</p>
+<h1><%= @place["name"] %></h1>
 
-<h3>Entries</h3>
+<h2>Entries</h2>
 <ul>
-  <% @entries.each do |entry| %>
+  <% for entry in @entries %>
     <li>
-      <strong><%= entry.title %></strong> (<%= entry.posted_on %>)<br>
-      <%= entry.description %>
+      <strong><%= entry["title"] %></strong> - <%= entry["posted_on"] %>
+      <p><%= entry["description"] %></p>
     </li>
   <% end %>
 </ul>
+
 <p>
-  <%= link_to 'Add New Entry', new_entry_path(place_id: @place.id) %>
+  <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
+</p>
+
+<p>
+  <a href="/places">Back to All Places</a>
 </p>
