update naming convention for date in view entries

--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -9,8 +9,8 @@
   </p>
 
   <p>
-    <label for="posted_on">Date</label><br>
-    <input type="date" name="posted_on" id="posted_on">
+    <label for="occurred_on">Date</label><br>
+    <input type="date" name="occurred_on" id="occurred_on">
   </p>
 
   <p>
