update naming convention for date from posted_on to occurred_on for show

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,7 +4,7 @@
 <ul>
   <% for entry in @entries %>
     <li>
-      <strong><%= entry["title"] %></strong> - <%= entry["posted_on"] %>
+      <strong><%= entry["title"] %></strong> - <%= entry["occurred_on"] %>
       <p><%= entry["description"] %></p>
     </li>
   <% end %>
